--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Lint all python files with flake8
         run: |
           # stop the build if there are flake8 errors (E203,W505 not compatible to black)
-          flake8 flake8 --extend-ignore=E203,W503 --max-line-length=88 --exclude=tests/data src tests
+          flake8 --extend-ignore=E203,W503 --max-line-length=88 --exclude=tests/data src tests
       - name: Type check package source with mypy
         run: |
           mypy src/pymacros4py tests --show-error-codes --disallow-untyped-defs --exclude tests/data
