--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Install from source (required for the pre-commit tests)
         run: python -m pip install .
       - name: Run all tests (including doc tests)
-        run: python ./tests\test_pymacros4py.py
+        run: python ./tests/test_pymacros4py.py
       - name: Upload coverage
         uses: codecov/codecov-action@v3
 
